y.output
   0  $accept : file $end

   1  file : program
   2       | module

   3  program : PROGRAM declarations START body END

   4  module : MODULE declarations END

   5  declarations :
   6               | declarations ';' declaration
   7               | declaration

   8  declaration : function
   9              | qualificator variable
  10              | qualificator CONST variable
  11              | qualificator variable ASSIGN literals literalscomma
  12              | qualificator CONST variable ASSIGN literals literalscomma

  13  $$1 :

  14  function : FUNCTION qualificator type IDENTIFIER $$1 variables ddone

  15  $$2 :

  16  function : FUNCTION qualificator type IDENTIFIER $$2 ddone

  17  $$3 :

  18  function : FUNCTION qualificator VOID IDENTIFIER $$3 variables ddone

  19  $$4 :

  20  function : FUNCTION qualificator VOID IDENTIFIER $$4 ddone

  21  ddone : DONE
  22        | DO body

  23  variable : type IDENTIFIER
  24           | type IDENTIFIER '[' INTEGER ']'

  25  variables : variable
  26            | variables ';' variable

  27  bodyvariables :
  28                | bodyvariables variable ';'

  29  type : NUMBER
  30       | STRING
  31       | ARRAY

  32  qualificator :
  33               | PUBLIC
  34               | FORWARD

  35  body : bodyvariables instructions instructionfinal

  36  literal : INTEGER
  37          | CHAR
  38          | CCHAR

  39  literals : literal
  40           | literals literal

  41  literalscomma :
  42                | literalscomma ',' literal

  43  instructions :
  44               | instructions instructioninit

  45  instructioninit : IF expression THEN instructions instructionfinal elifexp elseexp FI
  46                  | FOR expression UNTIL expression STEP expression DO instructions instructionfinal DONE
  47                  | expression ';'
  48                  | expression '!'
  49                  | lvalue '#' expression ';'

  50  instructionfinal :
  51                   | REPEAT
  52                   | STOP
  53                   | RETURN
  54                   | RETURN expression

  55  elifexp :
  56          | elifexp ELIF expression THEN instructions instructionfinal

  57  elseexp :
  58          | ELSE instructions instructionfinal

  59  expression : lvalue
  60             | literals
  61             | '(' expression ')'
  62             | '?'
  63             | invocation
  64             | '-' expression
  65             | expression '^' expression
  66             | expression '*' expression
  67             | expression '/' expression
  68             | expression '%' expression
  69             | expression '+' expression
  70             | expression '-' expression
  71             | expression '<' expression
  72             | expression '>' expression
  73             | expression GE expression
  74             | expression LE expression
  75             | expression NE expression
  76             | expression '=' expression
  77             | '~' expression
  78             | expression '&' expression
  79             | expression '|' expression
  80             | lvalue ASSIGN expression

  81  invocation : expression '(' args ')'

  82  lvalue : IDENTIFIER
  83         | lvalue '[' expression ']'
  84         | '&' lvalue

  85  args : expression
  86       | args ',' expression

state 0
	$accept : . file $end  (0)

	PROGRAM  shift 1
	MODULE  shift 2
	.  error

	file  goto 3
	program  goto 4
	module  goto 5


state 1
	program : PROGRAM . declarations START body END  (3)
	declarations : .  (5)
	qualificator : .  (32)

	FUNCTION  shift 6
	PUBLIC  shift 7
	FORWARD  shift 8
	START  reduce 5
	CONST  reduce 32
	NUMBER  reduce 32
	ARRAY  reduce 32
	STRING  reduce 32
	';'  reduce 5

	declarations  goto 9
	declaration  goto 10
	qualificator  goto 11
	function  goto 12


state 2
	module : MODULE . declarations END  (4)
	declarations : .  (5)
	qualificator : .  (32)

	FUNCTION  shift 6
	PUBLIC  shift 7
	FORWARD  shift 8
	END  reduce 5
	CONST  reduce 32
	NUMBER  reduce 32
	ARRAY  reduce 32
	STRING  reduce 32
	';'  reduce 5

	declarations  goto 13
	declaration  goto 10
	qualificator  goto 11
	function  goto 12


state 3
	$accept : file . $end  (0)

	$end  accept


state 4
	file : program .  (1)

	.  reduce 1


state 5
	file : module .  (2)

	.  reduce 2


state 6
	function : FUNCTION . qualificator type IDENTIFIER $$1 variables ddone  (14)
	function : FUNCTION . qualificator type IDENTIFIER $$2 ddone  (16)
	function : FUNCTION . qualificator VOID IDENTIFIER $$3 variables ddone  (18)
	function : FUNCTION . qualificator VOID IDENTIFIER $$4 ddone  (20)
	qualificator : .  (32)

	PUBLIC  shift 7
	FORWARD  shift 8
	VOID  reduce 32
	NUMBER  reduce 32
	ARRAY  reduce 32
	STRING  reduce 32

	qualificator  goto 14


state 7
	qualificator : PUBLIC .  (33)

	.  reduce 33


state 8
	qualificator : FORWARD .  (34)

	.  reduce 34


state 9
	program : PROGRAM declarations . START body END  (3)
	declarations : declarations . ';' declaration  (6)

	START  shift 15
	';'  shift 16
	.  error


state 10
	declarations : declaration .  (7)

	.  reduce 7


state 11
	declaration : qualificator . variable  (9)
	declaration : qualificator . CONST variable  (10)
	declaration : qualificator . variable ASSIGN literals literalscomma  (11)
	declaration : qualificator . CONST variable ASSIGN literals literalscomma  (12)

	CONST  shift 17
	NUMBER  shift 18
	ARRAY  shift 19
	STRING  shift 20
	.  error

	variable  goto 21
	type  goto 22


state 12
	declaration : function .  (8)

	.  reduce 8


state 13
	module : MODULE declarations . END  (4)
	declarations : declarations . ';' declaration  (6)

	END  shift 23
	';'  shift 16
	.  error


state 14
	function : FUNCTION qualificator . type IDENTIFIER $$1 variables ddone  (14)
	function : FUNCTION qualificator . type IDENTIFIER $$2 ddone  (16)
	function : FUNCTION qualificator . VOID IDENTIFIER $$3 variables ddone  (18)
	function : FUNCTION qualificator . VOID IDENTIFIER $$4 ddone  (20)

	VOID  shift 24
	NUMBER  shift 18
	ARRAY  shift 19
	STRING  shift 20
	.  error

	type  goto 25


state 15
	program : PROGRAM declarations START . body END  (3)
	bodyvariables : .  (27)

	.  reduce 27

	body  goto 26
	bodyvariables  goto 27


state 16
	declarations : declarations ';' . declaration  (6)
	qualificator : .  (32)

	FUNCTION  shift 6
	PUBLIC  shift 7
	FORWARD  shift 8
	CONST  reduce 32
	NUMBER  reduce 32
	ARRAY  reduce 32
	STRING  reduce 32

	declaration  goto 28
	qualificator  goto 11
	function  goto 12


state 17
	declaration : qualificator CONST . variable  (10)
	declaration : qualificator CONST . variable ASSIGN literals literalscomma  (12)

	NUMBER  shift 18
	ARRAY  shift 19
	STRING  shift 20
	.  error

	variable  goto 29
	type  goto 22


state 18
	type : NUMBER .  (29)

	.  reduce 29


state 19
	type : ARRAY .  (31)

	.  reduce 31


state 20
	type : STRING .  (30)

	.  reduce 30


state 21
	declaration : qualificator variable .  (9)
	declaration : qualificator variable . ASSIGN literals literalscomma  (11)

	ASSIGN  shift 30
	START  reduce 9
	END  reduce 9
	';'  reduce 9


state 22
	variable : type . IDENTIFIER  (23)
	variable : type . IDENTIFIER '[' INTEGER ']'  (24)

	IDENTIFIER  shift 31
	.  error


state 23
	module : MODULE declarations END .  (4)

	.  reduce 4


state 24
	function : FUNCTION qualificator VOID . IDENTIFIER $$3 variables ddone  (18)
	function : FUNCTION qualificator VOID . IDENTIFIER $$4 ddone  (20)

	IDENTIFIER  shift 32
	.  error


state 25
	function : FUNCTION qualificator type . IDENTIFIER $$1 variables ddone  (14)
	function : FUNCTION qualificator type . IDENTIFIER $$2 ddone  (16)

	IDENTIFIER  shift 33
	.  error


state 26
	program : PROGRAM declarations START body . END  (3)

	END  shift 34
	.  error


state 27
	bodyvariables : bodyvariables . variable ';'  (28)
	body : bodyvariables . instructions instructionfinal  (35)
	instructions : .  (43)

	NUMBER  shift 18
	ARRAY  shift 19
	STRING  shift 20
	INTEGER  reduce 43
	CHAR  reduce 43
	IDENTIFIER  reduce 43
	CCHAR  reduce 43
	START  reduce 43
	END  reduce 43
	IF  reduce 43
	FOR  reduce 43
	REPEAT  reduce 43
	STOP  reduce 43
	RETURN  reduce 43
	'('  reduce 43
	'?'  reduce 43
	'-'  reduce 43
	'~'  reduce 43
	'&'  reduce 43
	';'  reduce 43

	variable  goto 35
	type  goto 22
	instructions  goto 36


state 28
	declarations : declarations ';' declaration .  (6)

	.  reduce 6


state 29
	declaration : qualificator CONST variable .  (10)
	declaration : qualificator CONST variable . ASSIGN literals literalscomma  (12)

	ASSIGN  shift 37
	START  reduce 10
	END  reduce 10
	';'  reduce 10


state 30
	declaration : qualificator variable ASSIGN . literals literalscomma  (11)

	INTEGER  shift 38
	CHAR  shift 39
	CCHAR  shift 40
	.  error

	literal  goto 41
	literals  goto 42


state 31
	variable : type IDENTIFIER .  (23)
	variable : type IDENTIFIER . '[' INTEGER ']'  (24)

	'['  shift 43
	START  reduce 23
	END  reduce 23
	DO  reduce 23
	DONE  reduce 23
	ASSIGN  reduce 23
	';'  reduce 23


state 32
	function : FUNCTION qualificator VOID IDENTIFIER . $$3 variables ddone  (18)
	function : FUNCTION qualificator VOID IDENTIFIER . $$4 ddone  (20)
	$$3 : .  (17)
	$$4 : .  (19)

	NUMBER  reduce 17
	ARRAY  reduce 17
	STRING  reduce 17
	DO  reduce 19
	DONE  reduce 19

	$$3  goto 44
	$$4  goto 45


state 33
	function : FUNCTION qualificator type IDENTIFIER . $$1 variables ddone  (14)
	function : FUNCTION qualificator type IDENTIFIER . $$2 ddone  (16)
	$$1 : .  (13)
	$$2 : .  (15)

	NUMBER  reduce 13
	ARRAY  reduce 13
	STRING  reduce 13
	DO  reduce 15
	DONE  reduce 15

	$$1  goto 46
	$$2  goto 47


state 34
	program : PROGRAM declarations START body END .  (3)

	.  reduce 3


state 35
	bodyvariables : bodyvariables variable . ';'  (28)

	';'  shift 48
	.  error


state 36
	body : bodyvariables instructions . instructionfinal  (35)
	instructions : instructions . instructioninit  (44)
	instructionfinal : .  (50)

	INTEGER  shift 38
	CHAR  shift 39
	IDENTIFIER  shift 49
	CCHAR  shift 40
	IF  shift 50
	FOR  shift 51
	REPEAT  shift 52
	STOP  shift 53
	RETURN  shift 54
	'('  shift 55
	'?'  shift 56
	'-'  shift 57
	'~'  shift 58
	'&'  shift 59
	START  reduce 50
	END  reduce 50
	';'  reduce 50

	literal  goto 41
	literals  goto 60
	instructioninit  goto 61
	instructionfinal  goto 62
	expression  goto 63
	lvalue  goto 64
	invocation  goto 65


state 37
	declaration : qualificator CONST variable ASSIGN . literals literalscomma  (12)

	INTEGER  shift 38
	CHAR  shift 39
	CCHAR  shift 40
	.  error

	literal  goto 41
	literals  goto 66


state 38
	literal : INTEGER .  (36)

	.  reduce 36


state 39
	literal : CHAR .  (37)

	.  reduce 37


state 40
	literal : CCHAR .  (38)

	.  reduce 38


state 41
	literals : literal .  (39)

	.  reduce 39


state 42
	declaration : qualificator variable ASSIGN literals . literalscomma  (11)
	literals : literals . literal  (40)
	literalscomma : .  (41)

	INTEGER  shift 38
	CHAR  shift 39
	CCHAR  shift 40
	START  reduce 41
	END  reduce 41
	';'  reduce 41
	','  reduce 41

	literal  goto 67
	literalscomma  goto 68


state 43
	variable : type IDENTIFIER '[' . INTEGER ']'  (24)

	INTEGER  shift 69
	.  error


state 44
	function : FUNCTION qualificator VOID IDENTIFIER $$3 . variables ddone  (18)

	NUMBER  shift 18
	ARRAY  shift 19
	STRING  shift 20
	.  error

	variable  goto 70
	type  goto 22
	variables  goto 71


state 45
	function : FUNCTION qualificator VOID IDENTIFIER $$4 . ddone  (20)

	DO  shift 72
	DONE  shift 73
	.  error

	ddone  goto 74


state 46
	function : FUNCTION qualificator type IDENTIFIER $$1 . variables ddone  (14)

	NUMBER  shift 18
	ARRAY  shift 19
	STRING  shift 20
	.  error

	variable  goto 70
	type  goto 22
	variables  goto 75


state 47
	function : FUNCTION qualificator type IDENTIFIER $$2 . ddone  (16)

	DO  shift 72
	DONE  shift 73
	.  error

	ddone  goto 76


state 48
	bodyvariables : bodyvariables variable ';' .  (28)

	.  reduce 28


state 49
	lvalue : IDENTIFIER .  (82)

	.  reduce 82


state 50
	instructioninit : IF . expression THEN instructions instructionfinal elifexp elseexp FI  (45)

	INTEGER  shift 38
	CHAR  shift 39
	IDENTIFIER  shift 49
	CCHAR  shift 40
	'('  shift 55
	'?'  shift 56
	'-'  shift 57
	'~'  shift 58
	'&'  shift 59
	.  error

	literal  goto 41
	literals  goto 60
	expression  goto 77
	lvalue  goto 78
	invocation  goto 65


state 51
	instructioninit : FOR . expression UNTIL expression STEP expression DO instructions instructionfinal DONE  (46)

	INTEGER  shift 38
	CHAR  shift 39
	IDENTIFIER  shift 49
	CCHAR  shift 40
	'('  shift 55
	'?'  shift 56
	'-'  shift 57
	'~'  shift 58
	'&'  shift 59
	.  error

	literal  goto 41
	literals  goto 60
	expression  goto 79
	lvalue  goto 78
	invocation  goto 65


state 52
	instructionfinal : REPEAT .  (51)

	.  reduce 51


state 53
	instructionfinal : STOP .  (52)

	.  reduce 52


state 54
	instructionfinal : RETURN .  (53)
	instructionfinal : RETURN . expression  (54)

	INTEGER  shift 38
	CHAR  shift 39
	IDENTIFIER  shift 49
	CCHAR  shift 40
	'('  shift 55
	'?'  shift 56
	'-'  shift 57
	'~'  shift 58
	'&'  shift 59
	START  reduce 53
	END  reduce 53
	ELSE  reduce 53
	ELIF  reduce 53
	FI  reduce 53
	DONE  reduce 53
	';'  reduce 53

	literal  goto 41
	literals  goto 60
	expression  goto 80
	lvalue  goto 78
	invocation  goto 65


state 55
	expression : '(' . expression ')'  (61)

	INTEGER  shift 38
	CHAR  shift 39
	IDENTIFIER  shift 49
	CCHAR  shift 40
	'('  shift 55
	'?'  shift 56
	'-'  shift 57
	'~'  shift 58
	'&'  shift 59
	.  error

	literal  goto 41
	literals  goto 60
	expression  goto 81
	lvalue  goto 78
	invocation  goto 65


state 56
	expression : '?' .  (62)

	.  reduce 62


state 57
	expression : '-' . expression  (64)

	INTEGER  shift 38
	CHAR  shift 39
	IDENTIFIER  shift 49
	CCHAR  shift 40
	'('  shift 55
	'?'  shift 56
	'-'  shift 57
	'~'  shift 58
	'&'  shift 59
	.  error

	literal  goto 41
	literals  goto 60
	expression  goto 82
	lvalue  goto 78
	invocation  goto 65


state 58
	expression : '~' . expression  (77)

	INTEGER  shift 38
	CHAR  shift 39
	IDENTIFIER  shift 49
	CCHAR  shift 40
	'('  shift 55
	'?'  shift 56
	'-'  shift 57
	'~'  shift 58
	'&'  shift 59
	.  error

	literal  goto 41
	literals  goto 60
	expression  goto 83
	lvalue  goto 78
	invocation  goto 65


state 59
	lvalue : '&' . lvalue  (84)

	IDENTIFIER  shift 49
	'&'  shift 59
	.  error

	lvalue  goto 84


state 60
	literals : literals . literal  (40)
	expression : literals .  (60)

	INTEGER  shift 38
	CHAR  shift 39
	CCHAR  shift 40
	START  reduce 60
	END  reduce 60
	THEN  reduce 60
	ELSE  reduce 60
	ELIF  reduce 60
	FI  reduce 60
	UNTIL  reduce 60
	STEP  reduce 60
	DO  reduce 60
	DONE  reduce 60
	']'  reduce 60
	'('  reduce 60
	')'  reduce 60
	'^'  reduce 60
	'*'  reduce 60
	'/'  reduce 60
	'%'  reduce 60
	'+'  reduce 60
	'-'  reduce 60
	'<'  reduce 60
	'>'  reduce 60
	LE  reduce 60
	GE  reduce 60
	NE  reduce 60
	'='  reduce 60
	'&'  reduce 60
	'|'  reduce 60
	';'  reduce 60
	','  reduce 60
	'!'  reduce 60

	literal  goto 67


state 61
	instructions : instructions instructioninit .  (44)

	.  reduce 44


state 62
	body : bodyvariables instructions instructionfinal .  (35)

	.  reduce 35


state 63
	instructioninit : expression . ';'  (47)
	instructioninit : expression . '!'  (48)
	expression : expression . '^' expression  (65)
	expression : expression . '*' expression  (66)
	expression : expression . '/' expression  (67)
	expression : expression . '%' expression  (68)
	expression : expression . '+' expression  (69)
	expression : expression . '-' expression  (70)
	expression : expression . '<' expression  (71)
	expression : expression . '>' expression  (72)
	expression : expression . GE expression  (73)
	expression : expression . LE expression  (74)
	expression : expression . NE expression  (75)
	expression : expression . '=' expression  (76)
	expression : expression . '&' expression  (78)
	expression : expression . '|' expression  (79)
	invocation : expression . '(' args ')'  (81)

	'('  shift 85
	'^'  shift 86
	'*'  shift 87
	'/'  shift 88
	'%'  shift 89
	'+'  shift 90
	'-'  shift 91
	'<'  shift 92
	'>'  shift 93
	LE  shift 94
	GE  shift 95
	NE  shift 96
	'='  shift 97
	'&'  shift 98
	'|'  shift 99
	';'  shift 100
	'!'  shift 101
	.  error


state 64
	instructioninit : lvalue . '#' expression ';'  (49)
	expression : lvalue .  (59)
	expression : lvalue . ASSIGN expression  (80)
	lvalue : lvalue . '[' expression ']'  (83)

	'['  shift 102
	ASSIGN  shift 103
	'#'  shift 104
	'('  reduce 59
	'^'  reduce 59
	'*'  reduce 59
	'/'  reduce 59
	'%'  reduce 59
	'+'  reduce 59
	'-'  reduce 59
	'<'  reduce 59
	'>'  reduce 59
	LE  reduce 59
	GE  reduce 59
	NE  reduce 59
	'='  reduce 59
	'&'  reduce 59
	'|'  reduce 59
	';'  reduce 59
	'!'  reduce 59


state 65
	expression : invocation .  (63)

	.  reduce 63


state 66
	declaration : qualificator CONST variable ASSIGN literals . literalscomma  (12)
	literals : literals . literal  (40)
	literalscomma : .  (41)

	INTEGER  shift 38
	CHAR  shift 39
	CCHAR  shift 40
	START  reduce 41
	END  reduce 41
	';'  reduce 41
	','  reduce 41

	literal  goto 67
	literalscomma  goto 105


state 67
	literals : literals literal .  (40)

	.  reduce 40


state 68
	declaration : qualificator variable ASSIGN literals literalscomma .  (11)
	literalscomma : literalscomma . ',' literal  (42)

	','  shift 106
	START  reduce 11
	END  reduce 11
	';'  reduce 11


state 69
	variable : type IDENTIFIER '[' INTEGER . ']'  (24)

	']'  shift 107
	.  error


state 70
	variables : variable .  (25)

	.  reduce 25


state 71
	function : FUNCTION qualificator VOID IDENTIFIER $$3 variables . ddone  (18)
	variables : variables . ';' variable  (26)

	DO  shift 72
	DONE  shift 73
	';'  shift 108
	.  error

	ddone  goto 109


state 72
	ddone : DO . body  (22)
	bodyvariables : .  (27)

	.  reduce 27

	body  goto 110
	bodyvariables  goto 27


state 73
	ddone : DONE .  (21)

	.  reduce 21


state 74
	function : FUNCTION qualificator VOID IDENTIFIER $$4 ddone .  (20)

	.  reduce 20


state 75
	function : FUNCTION qualificator type IDENTIFIER $$1 variables . ddone  (14)
	variables : variables . ';' variable  (26)

	DO  shift 72
	DONE  shift 73
	';'  shift 108
	.  error

	ddone  goto 111


state 76
	function : FUNCTION qualificator type IDENTIFIER $$2 ddone .  (16)

	.  reduce 16


state 77
	instructioninit : IF expression . THEN instructions instructionfinal elifexp elseexp FI  (45)
	expression : expression . '^' expression  (65)
	expression : expression . '*' expression  (66)
	expression : expression . '/' expression  (67)
	expression : expression . '%' expression  (68)
	expression : expression . '+' expression  (69)
	expression : expression . '-' expression  (70)
	expression : expression . '<' expression  (71)
	expression : expression . '>' expression  (72)
	expression : expression . GE expression  (73)
	expression : expression . LE expression  (74)
	expression : expression . NE expression  (75)
	expression : expression . '=' expression  (76)
	expression : expression . '&' expression  (78)
	expression : expression . '|' expression  (79)
	invocation : expression . '(' args ')'  (81)

	THEN  shift 112
	'('  shift 85
	'^'  shift 86
	'*'  shift 87
	'/'  shift 88
	'%'  shift 89
	'+'  shift 90
	'-'  shift 91
	'<'  shift 92
	'>'  shift 93
	LE  shift 94
	GE  shift 95
	NE  shift 96
	'='  shift 97
	'&'  shift 98
	'|'  shift 99
	.  error


state 78
	expression : lvalue .  (59)
	expression : lvalue . ASSIGN expression  (80)
	lvalue : lvalue . '[' expression ']'  (83)
